add_executable(asio_tutorial_timer2 timer2/timer.cc)
target_link_libraries(asio_tutorial_timer2 net)

add_executable(asio_tutorial_timer3 timer3/timer.cc)
target_link_libraries(asio_tutorial_timer3 net)

add_executable(asio_tutorial_timer4 timer4/timer.cc)
target_link_libraries(asio_tutorial_timer4 net)

add_executable(asio_tutorial_timer5 timer5/timer.cc)
target_link_libraries(asio_tutorial_timer5 net)

add_executable(asio_tutorial_timer6 timer6/timer.cc)
target_link_libraries(asio_tutorial_timer6 net)

